kubernetes/infrastructure/vpn/network-rules/media-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-network-policy
  namespace: media
spec:
  podSelector: {}
  ingress:
    - from: # Only allow ingress from K8S
        - ipBlock:
            cidr: 10.0.0.0/8
  egress:
    - to: # Only allow egress to K8S
        - ipBlock:
            cidr: 10.0.0.0/8
  policyTypes:
    - Ingress
    - Egress
